# OOP

./: .gitignore  README.md  pyproject.toml
htmlcov/: index.html
src/: category.py  main.py  product.py
tests/: test_category.py  test_product.py  test_products.py
